Fix clipping on filename

--- a/notebook/static/notebook/less/savewidget.less
+++ b/notebook/static/notebook/less/savewidget.less
@@ -1,4 +1,5 @@
 span.save_widget {
+    height: 30px;
     margin-top: 4px;
     display: flex;
     justify-content: flex-start;
@@ -6,7 +7,7 @@ span.save_widget {
     width: calc(~"100% - 210px");
     
     span.filename {
-        height: 1em;
+        height: 100%;
         line-height: 1em;
         margin-left: @padding-large-horizontal;
         border: none;
